municipality pagination visible fix

--- a/src/features/Municipalities/ui/MunicipalitiesTable.module.scss
+++ b/src/features/Municipalities/ui/MunicipalitiesTable.module.scss
@@ -26,7 +26,7 @@
 
 .headerTitle,
 .bodyValue {
-    padding: 0.6rem 1.5rem 0.6rem 0.5rem;
+    padding: 0.4rem 1.5rem 0.6rem 0.5rem;
 }
 
 .bodyValue {
